--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basit Site İndeksi</title>
+    <title>Ana Sayfa</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,32 +12,34 @@
         <div class="frame" id="classes-frame">
             <h2>Sınıflar</h2>
             <ul>
-                <li>Sınıf 7A</li>
-                <li>Sınıf 7B</li>
+                <li><a href="#" onclick="showSubjects('7A')">Sınıf 7A</a></li>
+                <li><a href="#" onclick="showSubjects('7B')">Sınıf 7B</a></li>
             </ul>
         </div>
 
         <!-- Konular Çerçevesi -->
         <div class="frame" id="subjects-frame">
             <h2>Konular</h2>
-            <ul>
-                <li>Konu 1</li>
-                <li>Konu 2</li>
-                <li>Konu 3</li>
-                <li>Konu 4</li>
-                <li>Konu 5</li>
-                <li>Konu 6</li>
-                <li>Konu 7</li>
-                <li>Konu 8</li>
-                <li>Konu 9</li>
-                <li>Konu 10</li>
-                <li>Konu 11</li>
-                <li>Konu 12</li>
-                <li>Konu 13</li>
-                <li>Konu 14</li>
-                <li>Konu 15</li>
+            <ul id="subjects-list">
+                <li><a href="konu1.html">Konu 1</a></li>
+                <li><a href="konu2.html">Konu 2</a></li>
+                <li><a href="konu3.html">Konu 3</a></li>
+                <li><a href="konu4.html">Konu 4</a></li>
+                <li><a href="konu5.html">Konu 5</a></li>
+                <li><a href="konu6.html">Konu 6</a></li>
+                <li><a href="konu7.html">Konu 7</a></li>
+                <li><a href="konu8.html">Konu 8</a></li>
+                <li><a href="konu9.html">Konu 9</a></li>
+                <li><a href="konu10.html">Konu 10</a></li>
+                <li><a href="konu11.html">Konu 11</a></li>
+                <li><a href="konu12.html">Konu 12</a></li>
+                <li><a href="konu13.html">Konu 13</a></li>
+                <li><a href="konu14.html">Konu 14</a></li>
+                <li><a href="konu15.html">Konu 15</a></li>
             </ul>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
