--- a/konu1.html
+++ b/konu1.html
@@ -3,31 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ana Sayfa</title>
+    <title>Konu 1</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <!-- Sınıflar Çerçevesi -->
-        <div class="frame" id="classes-frame">
-            <h2>Sınıflar</h2>
-            <ul>
-                <li><a href="#" onclick="showSubjects('7A')">Sınıf 7A</a></li>
-                <li><a href="#" onclick="showSubjects('7B')">Sınıf 7B</a></li>
-            </ul>
-        </div>
-
-        <!-- Konular Çerçevesi -->
-        <div class="frame" id="subjects-frame">
-            <h2>Konular</h2>
-            <ul id="subjects-list">
-                <li><a href="konu1.html">Konu 1</a></li>
-                <li><a href="konu2.html">Konu 2</a></li>
-                <!-- Diğer konuları buraya ekleyin -->
-            </ul>
+        <div class="frame">
+            <h2>Konu 1</h2>
+            <p>Bu konu hakkında detaylı bilgi burada bulunacak.</p>
+            <a href="index.html">Ana Sayfaya Dön</a>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
