--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         body {
             font-family: Arial, sans-serif;
+            background-color: #f2f2f2; /* Hafif koyu arka plan rengi */
         }
 
         /* Banner Ayarları */
@@ -28,10 +29,27 @@
         }
 
         /* Tablo Ayarları */
+        .content-wrapper {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            margin-top: 20px;
+        }
+
+        .math-section {
+            width: 25%;
+            padding: 20px;
+            color: #333;
+            font-size: 1.2rem;
+            background-color: #e0e0e0; /* Sol ve sağ bölüm için daha koyu bir ton */
+        }
+
         .table-container {
-            margin: 20px auto;
-            width: 60%; /* Sayfanın %60'ı kadar genişlik */
+            width: 50%; /* Sayfanın %50'si kadar genişlik */
             text-align: center;
+            background-color: white;
+            padding: 20px;
+            border: 1px solid #ddd;
         }
 
         .table-header {
@@ -69,78 +87,92 @@
         <h1>Site İndeksi</h1>
     </div>
 
-    <!-- Tablo -->
-    <div class="table-container">
-        <div class="table-header" onclick="toggleMenu('menu7a')">7A</div>
-        <ul id="menu7a" class="content-list">
-            <!-- Konu 1'den 15'e kadar menü -->
-            <li><a href="konu1.html">Konu 1</a></li>
-            <li><a href="konu2.html">Konu 2</a></li>
-            <li><a href="konu3.html">Konu 3</a></li>
-            <li><a href="konu4.html">Konu 4</a></li>
-            <li><a href="konu5.html">Konu 5</a></li>
-            <li><a href="konu6.html">Konu 6</a></li>
-            <li><a href="konu7.html">Konu 7</a></li>
-            <li><a href="konu8.html">Konu 8</a></li>
-            <li><a href="konu9.html">Konu 9</a></li>
-            <li><a href="konu10.html">Konu 10</a></li>
-            <li><a href="konu11.html">Konu 11</a></li>
-            <li><a href="konu12.html">Konu 12</a></li>
-            <li><a href="konu13.html">Konu 13</a></li>
-            <li><a href="konu14.html">Konu 14</a></li>
-            <li><a href="konu15.html">Konu 15</a></li>
-        </ul>
+    <!-- İçerik ve Matematik Formülleri -->
+    <div class="content-wrapper">
+        
+        <!-- Sol tarafta matematik formülleri -->
+        <div class="math-section">
+            <h2>Matematik Formülleri</h2>
+            <p>Pythagorean: \(a^2 + b^2 = c^2\)</p>
+            <p>Quadratic: \(ax^2 + bx + c = 0\)</p>
+            <p>Euler: \(e^{i\pi} + 1 = 0\)</p>
+        </div>
 
-        <div class="table-header" onclick="toggleMenu('menu7b')">7B</div>
-        <ul id="menu7b" class="content-list">
-            <!-- Konu 1'den 15'e kadar menü -->
-            <li><a href="konu1.html">Konu 1</a></li>
-            <li><a href="konu2.html">Konu 2</a></li>
-            <li><a href="konu3.html">Konu 3</a></li>
-            <li><a href="konu4.html">Konu 4</a></li>
-            <li><a href="konu5.html">Konu 5</a></li>
-            <li><a href="konu6.html">Konu 6</a></li>
-            <li><a href="konu7.html">Konu 7</a></li>
-            <li><a href="konu8.html">Konu 8</a></li>
-            <li><a href="konu9.html">Konu 9</a></li>
-            <li><a href="konu10.html">Konu 10</a></li>
-            <li><a href="konu11.html">Konu 11</a></li>
-            <li><a href="konu12.html">Konu 12</a></li>
-            <li><a href="konu13.html">Konu 13</a></li>
-            <li><a href="konu14.html">Konu 14</a></li>
-            <li><a href="konu15.html">Konu 15</a></li>
-        </ul>
+        <!-- Tablo -->
+        <div class="table-container">
+            <div class="table-header" onclick="toggleMenu('menu7a')">7A</div>
+            <ul id="menu7a" class="content-list">
+                <!-- Konu 1'den 15'e kadar menü -->
+                <li><a href="konu1.html">Konu 1</a></li>
+                <li><a href="konu2.html">Konu 2</a></li>
+                <li><a href="konu3.html">Konu 3</a></li>
+                <li><a href="konu4.html">Konu 4</a></li>
+                <li><a href="konu5.html">Konu 5</a></li>
+                <li><a href="konu6.html">Konu 6</a></li>
+                <li><a href="konu7.html">Konu 7</a></li>
+                <li><a href="konu8.html">Konu 8</a></li>
+                <li><a href="konu9.html">Konu 9</a></li>
+                <li><a href="konu10.html">Konu 10</a></li>
+                <li><a href="konu11.html">Konu 11</a></li>
+                <li><a href="konu12.html">Konu 12</a></li>
+                <li><a href="konu13.html">Konu 13</a></li>
+                <li><a href="konu14.html">Konu 14</a></li>
+                <li><a href="konu15.html">Konu 15</a></li>
+            </ul>
 
-        <div class="table-header" onclick="toggleMenu('menu8b')">8B</div>
-        <ul id="menu8b" class="content-list">
-            <!-- Konu 1'den 15'e kadar menü -->
-            <li><a href="konu1.html">Konu 1</a></li>
-            <li><a href="konu2.html">Konu 2</a></li>
-            <li><a href="konu3.html">Konu 3</a></li>
-            <li><a href="konu4.html">Konu 4</a></li>
-            <li><a href="konu5.html">Konu 5</a></li>
-            <li><a href="konu6.html">Konu 6</a></li>
-            <li><a href="konu7.html">Konu 7</a></li>
-            <li><a href="konu8.html">Konu 8</a></li>
-            <li><a href="konu9.html">Konu 9</a></li>
-            <li><a href="konu10.html">Konu 10</a></li>
-            <li><a href="konu11.html">Konu 11</a></li>
-            <li><a href="konu12.html">Konu 12</a></li>
-            <li><a href="konu13.html">Konu 13</a></li>
-            <li><a href="konu14.html">Konu 14</a></li>
-            <li><a href="konu15.html">Konu 15</a></li>
-        </ul>
+            <div class="table-header" onclick="toggleMenu('menu7b')">7B</div>
+            <ul id="menu7b" class="content-list">
+                <!-- Konu 1'den 15'e kadar menü -->
+                <li><a href="konu1.html">Konu 1</a></li>
+                <li><a href="konu2.html">Konu 2</a></li>
+                <li><a href="konu3.html">Konu 3</a></li>
+                <li><a href="konu4.html">Konu 4</a></li>
+                <li><a href="konu5.html">Konu 5</a></li>
+                <li><a href="konu6.html">Konu 6</a></li>
+                <li><a href="konu7.html">Konu 7</a></li>
+                <li><a href="konu8.html">Konu 8</a></li>
+                <li><a href="konu9.html">Konu 9</a></li>
+                <li><a href="konu10.html">Konu 10</a></li>
+                <li><a href="konu11.html">Konu 11</a></li>
+                <li><a href="konu12.html">Konu 12</a></li>
+                <li><a href="konu13.html">Konu 13</a></li>
+                <li><a href="konu14.html">Konu 14</a></li>
+                <li><a href="konu15.html">Konu 15</a></li>
+            </ul>
+
+            <div class="table-header" onclick="toggleMenu('menu8b')">8B</div>
+            <ul id="menu8b" class="content-list">
+                <!-- Konu 1'den 15'e kadar menü -->
+                <li><a href="konu1.html">Konu 1</a></li>
+                <li><a href="konu2.html">Konu 2</a></li>
+                <li><a href="konu3.html">Konu 3</a></li>
+                <li><a href="konu4.html">Konu 4</a></li>
+                <li><a href="konu5.html">Konu 5</a></li>
+                <li><a href="konu6.html">Konu 6</a></li>
+                <li><a href="konu7.html">Konu 7</a></li>
+                <li><a href="konu8.html">Konu 8</a></li>
+                <li><a href="konu9.html">Konu 9</a></li>
+                <li><a href="konu10.html">Konu 10</a></li>
+                <li><a href="konu11.html">Konu 11</a></li>
+                <li><a href="konu12.html">Konu 12</a></li>
+                <li><a href="konu13.html">Konu 13</a></li>
+                <li><a href="konu14.html">Konu 14</a></li>
+                <li><a href="konu15.html">Konu 15</a></li>
+            </ul>
+        </div>
+
+        <!-- Sağ tarafta matematik formülleri -->
+        <div class="math-section">
+            <h2>Matematik Formülleri</h2>
+            <p>Sinüs: \( \sin(\theta) = \frac{karşı}{hipotenüs} \)</p>
+            <p>Cosinüs: \( \cos(\theta) = \frac{komşu}{hipotenüs} \)</p>
+            <p>Alan: \( A = \pi r^2 \)</p>
+        </div>
     </div>
 
     <script>
         function toggleMenu(menuId) {
-            var menu = document.getElementById(menuId);
-            if (menu.style.display === "none" || menu.style.display === "") {
-                menu.style.display = "block";
-            } else {
-                menu.style.display = "none";
-            }
-        }
-    </script>
-</body>
-</html>
+            var allMenus = document.querySelectorAll('.content-list');
+            allMenus.forEach(function(menu) {
+                if (menu.id === menuId) {
+                    menu.style.display = menu.style.display === "block" ? "none" :
