--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #f2f2f2; /* Hafif koyu arka plan rengi */
+            background-color: #F0F0F0; /* RX-78-2 Gundam White */
         }
 
         /* Banner Ayarları */
         .banner {
-            background-color: #4CAF50;
+            background-color: #1F4BA6; /* RX-78-2 Gundam Blue */
             height: 15vh; /* Sayfanın %15'i kadar yükseklik */
             width: 100%; /* Genişliği otomatik */
             display: flex;
             justify-content: center;
             align-items: center;
-            color: white;
+            color: #FFD700; /* RX-78-2 Gundam Yellow */
             font-size: 2rem;
         }
 
@@ -39,15 +39,15 @@
         .math-section {
             width: 25%;
             padding: 20px;
-            color: #333;
+            color: #F0F0F0; /* RX-78-2 Gundam White */
             font-size: 1.2rem;
-            background-color: #e0e0e0; /* Sol ve sağ bölüm için daha koyu bir ton */
+            background-color: #2F2F2F; /* Phantom Gray */
         }
 
         .table-container {
             width: 50%; /* Sayfanın %50'si kadar genişlik */
             text-align: center;
-            background-color: white;
+            background-color: #2F2F2F; /* Phantom Gray */
             padding: 20px;
             border: 1px solid #ddd;
         }
@@ -56,7 +56,7 @@
             font-size: 2rem;
             font-weight: bold;
             font-style: italic;
-            color: #4CAF50;
+            color: #FFD700; /* RX-78-2 Gundam Yellow */
             cursor: pointer;
         }
 
@@ -72,11 +72,11 @@
 
         .content-list li a {
             text-decoration: none;
-            color: #333;
+            color: #F0F0F0; /* RX-78-2 Gundam White */
         }
 
         .content-list li a:hover {
-            color: #4CAF50;
+            color: #FFD700; /* RX-78-2 Gundam Yellow */
         }
     </style>
 </head>
@@ -164,19 +164,4 @@
         <!-- Sağ tarafta matematik formülleri -->
         <div class="math-section">
             <h2>Matematik Formülleri</h2>
-            <p>Sinüs: \( \sin(\theta) = \frac{karşı}{hipotenüs} \)</p>
-            <p>Cosinüs: \( \cos(\theta) = \frac{komşu}{hipotenüs} \)</p>
-            <p>Alan: \( A = \pi r^2 \)</p>
-        </div>
-    </div>
-
-    <script>
-        function toggleMenu(menuId) {
-            var allMenus = document.querySelectorAll('.content-list');
-            allMenus.forEach(function(menu) {
-                if (menu.id === menuId) {
-                    // Tıklanan menüyü aç/kapat
-                    menu.style.display = menu.style.display === "block" ? "none" : "block";
-                } else {
-                    // Diğer menüleri kapat
-                    menu.style.display = "none";
+            <p>Sinüs: \( \sin(\theta) = \frac{karşı}{hipoten
