--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #F0F0F0; /* RX-78-2 Gundam White */
+            background-color: #2F2F2F; /* Phantom Gray - Koyu Gri */
         }
 
         /* Banner Ayarları */
@@ -28,12 +28,13 @@
             font-size: 2rem;
         }
 
-        /* Tablo Ayarları */
+        /* İçerik ve Tablo Ayarları */
         .content-wrapper {
             display: flex;
             justify-content: center;
             align-items: flex-start;
             margin-top: 20px;
+            background-color: #8B0000; /* HUG 06: Char's Custom Red - Koyu Bordo */
         }
 
         .math-section {
@@ -41,13 +42,13 @@
             padding: 20px;
             color: #F0F0F0; /* RX-78-2 Gundam White */
             font-size: 1.2rem;
-            background-color: #2F2F2F; /* Phantom Gray */
+            background-color: #E9967A; /* Char's Custom Pink */
         }
 
         .table-container {
             width: 50%; /* Sayfanın %50'si kadar genişlik */
             text-align: center;
-            background-color: #2F2F2F; /* Phantom Gray */
+            background-color: #B22222; /* RX-78-2 Gundam Red - Koyu Kırmızı */
             padding: 20px;
             border: 1px solid #ddd;
         }
@@ -102,7 +103,6 @@
         <div class="table-container">
             <div class="table-header" onclick="toggleMenu('menu7a')">7A</div>
             <ul id="menu7a" class="content-list">
-                <!-- Konu 1'den 15'e kadar menü -->
                 <li><a href="konu1.html">Konu 1</a></li>
                 <li><a href="konu2.html">Konu 2</a></li>
                 <li><a href="konu3.html">Konu 3</a></li>
@@ -122,7 +122,6 @@
 
             <div class="table-header" onclick="toggleMenu('menu7b')">7B</div>
             <ul id="menu7b" class="content-list">
-                <!-- Konu 1'den 15'e kadar menü -->
                 <li><a href="konu1.html">Konu 1</a></li>
                 <li><a href="konu2.html">Konu 2</a></li>
                 <li><a href="konu3.html">Konu 3</a></li>
@@ -142,7 +141,6 @@
 
             <div class="table-header" onclick="toggleMenu('menu8b')">8B</div>
             <ul id="menu8b" class="content-list">
-                <!-- Konu 1'den 15'e kadar menü -->
                 <li><a href="konu1.html">Konu 1</a></li>
                 <li><a href="konu2.html">Konu 2</a></li>
                 <li><a href="konu3.html">Konu 3</a></li>
@@ -164,4 +162,4 @@
         <!-- Sağ tarafta matematik formülleri -->
         <div class="math-section">
             <h2>Matematik Formülleri</h2>
-            <p>Sinüs: \( \sin(\theta) = \frac{karşı}{hipoten
+            <p>Sinüs:
