--- a/index.html
+++ b/index.html
@@ -13,51 +13,32 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #2F2F2F; /* Phantom Gray - Koyu Gri */
         }
 
         /* Banner Ayarları */
         .banner {
-            background-color: #1F4BA6; /* RX-78-2 Gundam Blue */
+            background-color: #4CAF50;
             height: 15vh; /* Sayfanın %15'i kadar yükseklik */
             width: 100%; /* Genişliği otomatik */
             display: flex;
             justify-content: center;
             align-items: center;
-            color: #FFD700; /* RX-78-2 Gundam Yellow */
+            color: white;
             font-size: 2rem;
         }
 
-        /* İçerik ve Tablo Ayarları */
-        .content-wrapper {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            margin-top: 20px;
-            background-color: #8B0000; /* HUG 06: Char's Custom Red - Koyu Bordo */
-        }
-
-        .math-section {
-            width: 25%;
-            padding: 20px;
-            color: #F0F0F0; /* RX-78-2 Gundam White */
-            font-size: 1.2rem;
-            background-color: #E9967A; /* Char's Custom Pink */
-        }
-
+        /* Tablo Ayarları */
         .table-container {
-            width: 50%; /* Sayfanın %50'si kadar genişlik */
+            margin: 20px auto;
+            width: 60%; /* Sayfanın %60'ı kadar genişlik */
             text-align: center;
-            background-color: #B22222; /* RX-78-2 Gundam Red - Koyu Kırmızı */
-            padding: 20px;
-            border: 1px solid #ddd;
         }
 
         .table-header {
             font-size: 2rem;
             font-weight: bold;
             font-style: italic;
-            color: #FFD700; /* RX-78-2 Gundam Yellow */
+            color: #4CAF50;
             cursor: pointer;
         }
 
@@ -73,11 +54,11 @@
 
         .content-list li a {
             text-decoration: none;
-            color: #F0F0F0; /* RX-78-2 Gundam White */
+            color: #333;
         }
 
         .content-list li a:hover {
-            color: #FFD700; /* RX-78-2 Gundam Yellow */
+            color: #4CAF50;
         }
     </style>
 </head>
@@ -88,78 +69,78 @@
         <h1>Site İndeksi</h1>
     </div>
 
-    <!-- İçerik ve Matematik Formülleri -->
-    <div class="content-wrapper">
-        
-        <!-- Sol tarafta matematik formülleri -->
-        <div class="math-section">
-            <h2>Matematik Formülleri</h2>
-            <p>Pythagorean: \(a^2 + b^2 = c^2\)</p>
-            <p>Quadratic: \(ax^2 + bx + c = 0\)</p>
-            <p>Euler: \(e^{i\pi} + 1 = 0\)</p>
-        </div>
+    <!-- Tablo -->
+    <div class="table-container">
+        <div class="table-header" onclick="toggleMenu('menu7a')">7A</div>
+        <ul id="menu7a" class="content-list">
+            <!-- Konu 1'den 15'e kadar menü -->
+            <li><a href="konu1.html">Konu 1</a></li>
+            <li><a href="konu2.html">Konu 2</a></li>
+            <li><a href="konu3.html">Konu 3</a></li>
+            <li><a href="konu4.html">Konu 4</a></li>
+            <li><a href="konu5.html">Konu 5</a></li>
+            <li><a href="konu6.html">Konu 6</a></li>
+            <li><a href="konu7.html">Konu 7</a></li>
+            <li><a href="konu8.html">Konu 8</a></li>
+            <li><a href="konu9.html">Konu 9</a></li>
+            <li><a href="konu10.html">Konu 10</a></li>
+            <li><a href="konu11.html">Konu 11</a></li>
+            <li><a href="konu12.html">Konu 12</a></li>
+            <li><a href="konu13.html">Konu 13</a></li>
+            <li><a href="konu14.html">Konu 14</a></li>
+            <li><a href="konu15.html">Konu 15</a></li>
+        </ul>
 
-        <!-- Tablo -->
-        <div class="table-container">
-            <div class="table-header" onclick="toggleMenu('menu7a')">7A</div>
-            <ul id="menu7a" class="content-list">
-                <li><a href="konu1.html">Konu 1</a></li>
-                <li><a href="konu2.html">Konu 2</a></li>
-                <li><a href="konu3.html">Konu 3</a></li>
-                <li><a href="konu4.html">Konu 4</a></li>
-                <li><a href="konu5.html">Konu 5</a></li>
-                <li><a href="konu6.html">Konu 6</a></li>
-                <li><a href="konu7.html">Konu 7</a></li>
-                <li><a href="konu8.html">Konu 8</a></li>
-                <li><a href="konu9.html">Konu 9</a></li>
-                <li><a href="konu10.html">Konu 10</a></li>
-                <li><a href="konu11.html">Konu 11</a></li>
-                <li><a href="konu12.html">Konu 12</a></li>
-                <li><a href="konu13.html">Konu 13</a></li>
-                <li><a href="konu14.html">Konu 14</a></li>
-                <li><a href="konu15.html">Konu 15</a></li>
-            </ul>
+        <div class="table-header" onclick="toggleMenu('menu7b')">7B</div>
+        <ul id="menu7b" class="content-list">
+            <!-- Konu 1'den 15'e kadar menü -->
+            <li><a href="konu1.html">Konu 1</a></li>
+            <li><a href="konu2.html">Konu 2</a></li>
+            <li><a href="konu3.html">Konu 3</a></li>
+            <li><a href="konu4.html">Konu 4</a></li>
+            <li><a href="konu5.html">Konu 5</a></li>
+            <li><a href="konu6.html">Konu 6</a></li>
+            <li><a href="konu7.html">Konu 7</a></li>
+            <li><a href="konu8.html">Konu 8</a></li>
+            <li><a href="konu9.html">Konu 9</a></li>
+            <li><a href="konu10.html">Konu 10</a></li>
+            <li><a href="konu11.html">Konu 11</a></li>
+            <li><a href="konu12.html">Konu 12</a></li>
+            <li><a href="konu13.html">Konu 13</a></li>
+            <li><a href="konu14.html">Konu 14</a></li>
+            <li><a href="konu15.html">Konu 15</a></li>
+        </ul>
 
-            <div class="table-header" onclick="toggleMenu('menu7b')">7B</div>
-            <ul id="menu7b" class="content-list">
-                <li><a href="konu1.html">Konu 1</a></li>
-                <li><a href="konu2.html">Konu 2</a></li>
-                <li><a href="konu3.html">Konu 3</a></li>
-                <li><a href="konu4.html">Konu 4</a></li>
-                <li><a href="konu5.html">Konu 5</a></li>
-                <li><a href="konu6.html">Konu 6</a></li>
-                <li><a href="konu7.html">Konu 7</a></li>
-                <li><a href="konu8.html">Konu 8</a></li>
-                <li><a href="konu9.html">Konu 9</a></li>
-                <li><a href="konu10.html">Konu 10</a></li>
-                <li><a href="konu11.html">Konu 11</a></li>
-                <li><a href="konu12.html">Konu 12</a></li>
-                <li><a href="konu13.html">Konu 13</a></li>
-                <li><a href="konu14.html">Konu 14</a></li>
-                <li><a href="konu15.html">Konu 15</a></li>
-            </ul>
+        <div class="table-header" onclick="toggleMenu('menu8b')">8B</div>
+        <ul id="menu8b" class="content-list">
+            <!-- Konu 1'den 15'e kadar menü -->
+            <li><a href="konu1.html">Konu 1</a></li>
+            <li><a href="konu2.html">Konu 2</a></li>
+            <li><a href="konu3.html">Konu 3</a></li>
+            <li><a href="konu4.html">Konu 4</a></li>
+            <li><a href="konu5.html">Konu 5</a></li>
+            <li><a href="konu6.html">Konu 6</a></li>
+            <li><a href="konu7.html">Konu 7</a></li>
+            <li><a href="konu8.html">Konu 8</a></li>
+            <li><a href="konu9.html">Konu 9</a></li>
+            <li><a href="konu10.html">Konu 10</a></li>
+            <li><a href="konu11.html">Konu 11</a></li>
+            <li><a href="konu12.html">Konu 12</a></li>
+            <li><a href="konu13.html">Konu 13</a></li>
+            <li><a href="konu14.html">Konu 14</a></li>
+            <li><a href="konu15.html">Konu 15</a></li>
+        </ul>
+    </div>
 
-            <div class="table-header" onclick="toggleMenu('menu8b')">8B</div>
-            <ul id="menu8b" class="content-list">
-                <li><a href="konu1.html">Konu 1</a></li>
-                <li><a href="konu2.html">Konu 2</a></li>
-                <li><a href="konu3.html">Konu 3</a></li>
-                <li><a href="konu4.html">Konu 4</a></li>
-                <li><a href="konu5.html">Konu 5</a></li>
-                <li><a href="konu6.html">Konu 6</a></li>
-                <li><a href="konu7.html">Konu 7</a></li>
-                <li><a href="konu8.html">Konu 8</a></li>
-                <li><a href="konu9.html">Konu 9</a></li>
-                <li><a href="konu10.html">Konu 10</a></li>
-                <li><a href="konu11.html">Konu 11</a></li>
-                <li><a href="konu12.html">Konu 12</a></li>
-                <li><a href="konu13.html">Konu 13</a></li>
-                <li><a href="konu14.html">Konu 14</a></li>
-                <li><a href="konu15.html">Konu 15</a></li>
-            </ul>
-        </div>
-
-        <!-- Sağ tarafta matematik formülleri -->
-        <div class="math-section">
-            <h2>Matematik Formülleri</h2>
-            <p>Sinüs:
+    <script>
+        function toggleMenu(menuId) {
+            var menu = document.getElementById(menuId);
+            if (menu.style.display === "none" || menu.style.display === "") {
+                menu.style.display = "block";
+            } else {
+                menu.style.display = "none";
+            }
+        }
+    </script>
+</body>
+</html>
