--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         /* Tablo Ayarları */
         .table-container {
             margin: 20px auto;
-            width: 60%; /* Sayfanın %60'ı kadar genişlik */
+            width: 50%; /* Sayfanın %50'si kadar genişlik */
             text-align: center;
         }
 
