--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="iso-8859-9">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site İndeksi</title>
+    <title>Site Ãndeksi</title>
     <style>
         body {
             margin: 0;
@@ -14,7 +14,7 @@
         /* Banner */
         .banner {
             width: 100%;
-            height: 15vh; /* Yükseklik %15 */
+            height: 15vh; /* YÃ¼kseklik %15 */
             background-color: #4CAF50;
             color: white;
             text-align: center;
@@ -24,10 +24,10 @@
             font-size: 24px;
         }
 
-        /* Resim kenar boşlukları */
+        /* Resim kenar boÃ¾luklarÃ½ */
         .side-image {
             width: 17%;
-            height: calc(100vh - 15vh); /* Banner'ı çıkartıyoruz */
+            height: calc(100vh - 15vh); /* Banner'Ã½ Ã§Ã½kartÃ½yoruz */
             position: fixed;
             top: 15vh;
         }
@@ -46,7 +46,7 @@
 
         /* Orta alan */
         .content {
-            margin: 15vh 17% 0 17%; /* Banner ve kenarlardan boşluklar */
+            margin: 15vh 17% 0 17%; /* Banner ve kenarlardan boÃ¾luklar */
             text-align: center;
         }
 
@@ -79,15 +79,15 @@
     <!-- Sol resim -->
     <div class="side-image left-image"></div>
 
-    <!-- Sağ resim -->
+    <!-- SaÃ° resim -->
     <div class="side-image right-image"></div>
 
-    <!-- Orta içerik -->
+    <!-- Orta iÃ§erik -->
     <div class="content">
-        <a href="5_sinif.html">5. Sınıf</a>
-        <a href="6_sinif.html">6. Sınıf</a>
-        <a href="7_sinif.html">7. Sınıf</a>
-        <a href="8_sinif.html">8. Sınıf</a>
+        <a href="5_sinif.html">5. SÃ½nÃ½f</a>
+        <a href="6_sinif.html">6. SÃ½nÃ½f</a>
+        <a href="7_sinif.html">7. SÃ½nÃ½f</a>
+        <a href="8_sinif.html">8. SÃ½nÃ½f</a>
     </div>
 
 </body>
